fix: string template literal

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </ul>
   <script>
     function render(fileName) {
-      sessionStorage.setItem("mdPath", `./src/md/${fileName}.md`);
+      sessionStorage.setItem("mdPath", './src/md/'+fileName+'.md');
       window.location = 'template.html';
     }
   </script>
