--- a/template.html
+++ b/template.html
@@ -17,8 +17,8 @@
   <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
   </script>
   <script type="text/javascript">
-  var slideshow = remark.create({
-      sourceUrl: sessionStorage.getItem('mdPath')
+    var slideshow = remark.create({
+      sourceUrl: sessionStorage.getItem("mdPath")
     });
   </script>
 </body>
