fixed: missing logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <a style="display: flex; justify-content: center;">
-    <img style="width: 100px;" src="./static/images/rust-logo-256x256-blk.png" alt="Rust Logo" />
+    <img style="width: 100px;" src="./src/images/rust-logo-256x256-blk.png" alt="Rust Logo" />
   </a>
 
   <h1 align="center">The Rust Programming Language</h1>
@@ -213,7 +213,7 @@
   </ul>
   <script>
     function render(fileName) {
-      sessionStorage.setItem("mdPath", `./src/md/${fileName}.md`);
+      sessionStorage.setItem("mdPath", `./static/md/${fileName}.md`);
       window.location = "template.html";
     }
   </script>
