fix: changed static to src

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   </ul>
   <script>
     function render(fileName) {
-      sessionStorage.setItem("mdPath", `./static/md/${fileName}.md`);
+      sessionStorage.setItem("mdPath", `./src/md/${fileName}.md`);
       window.location = "template.html";
     }
   </script>
