--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
         <li>
           1.2.
-          <a href="#" onclick="render('1.2_Hello_World!')">Hello, World!</a>
+          <a href="#" onclick="render('1.2_Hello_World')">Hello, World!</a>
         </li>
         <li>
           1.3.
