--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <script>
     function render(fileName) {
       sessionStorage.setItem("mdPath", `./static/md/${fileName}.md`);
-      window.location = "template.html";
+      window.location = "./template.html";
     }
   </script>
 </body>
