added all pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </ul>
     </li>
 
-    <!-- <li>
+    <li>
       2 : Guessing Game Tutorial
       <ul>
         <li>
@@ -178,7 +178,7 @@
       <ul>
         <li>
           9.1.
-          <a href="#" onclick="render('9.1_Unrecoverable_Errors_with_panic!')"> Unrecoverable Errors with panic!
+          <a href="#" onclick="render('9.1_Unrecoverable_Errors_with_panic')"> Unrecoverable Errors with panic!
           </a>
         </li>
         <li>
@@ -187,7 +187,7 @@
         </li>
         <li>
           9.3.
-          <a href="#" onclick="render('9.3_To_panic!_or_Not_To_panic!')">To panic! or Not To panic!</a>
+          <a href="#" onclick="render('9.3_To_panic_or_Not_To_panic')">To panic! or Not To panic!</a>
         </li>
       </ul>
     </li>
@@ -202,14 +202,14 @@
         </li>
         <li>
           10.2.
-          <a href="#" onclick="render('10.2_Traits:_Defining_Shared_Behavior')">Traits: Defining Shared Behavior</a>
+          <a href="#" onclick="render('10.2_Traits_Defining_Shared_Behavior')">Traits: Defining Shared Behavior</a>
         </li>
         <li>
           10.3.
           <a href="#" onclick="render('10.3_Validating_References_with_Lifetimes')">Validating References with Lifetimes</a>
         </li>
       </ul>
-    </li> -->
+    </li>
   </ul>
   <script>
     function render(fileName) {
