added md template

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       <ul>
         <li>
           3.1.
-          <a href="#" onclick="render('3.1_Variables-and-Mutability')">Variables and Mutability</a>
+          <a href="#" onclick="render('3.1_Variables_and_Mutability')">Variables and Mutability</a>
         </li>
         <li>
           3.2.
-          <a href="#" onclick="render('3.2_Data-Types')"> Data Types</a>
+          <a href="#" onclick="render('3.2_Data_Types')"> Data Types</a>
         </li>
         <li>
           3.3.
