added link to guessing game

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <ul>
         <li>
           2.1.
-          <a href="#" onclick="render('4.1_What_is_Ownership')">Guessing Game</a>
+          <a href="#" onclick="render('2.1_Guessing_Game')">Guessing Game</a>
         </li>
       </ul>
     </li>
