improved explanation and added to index

--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     </li>
 
     <li>
-      8. Common Collections
+      8.
+      <a href="#" onclick="render('8.0_Common_Collections')">Common Collections</a>
       <ul>
         <li>
           8.1.
-          <a href="#" onclick="render('8.1_Vectors')"> Vectors
-          </a>
+          <a href="#" onclick="render('8.1_Vectors')">Vectors</a>
         </li>
         <li>
           8.2.
