added intro to index

--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@
         </li>
       </ul>
     </li>
-
+    
     <li>
-      9. Error Handling
+      9.
+      <a href="#" onclick="render('9.0_Error_Handling')">Error Handling</a>
       <ul>
         <li>
           9.1.
