--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
         </li>
       </ul>
     </li>
-
+    
     <li>
-      10. Generic Types, Traits, and Lifetimes
+      10. 
+      <a href="#" onclick="render('10.0_Generic_Types_Traits_and_Lifetimes')">Generic Types, Traits, and Lifetimes</a>
       <ul>
         <li>
           10.1.
