--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </li>
       </ul>
     </li>
-    
+
     <li>
       9.
       <a href="#" onclick="render('9.0_Error_Handling')">Error Handling</a>
@@ -194,9 +194,9 @@
         </li>
       </ul>
     </li>
-    
+
     <li>
-      10. 
+      10.
       <a href="#" onclick="render('10.0_Generic_Types_Traits_and_Lifetimes')">Generic Types, Traits, and Lifetimes</a>
       <ul>
         <li>
@@ -214,6 +214,258 @@
         </li>
       </ul>
     </li>
+
+    <li>
+      11.
+      <a href="#" onclick="render('11.0_Testing')">Testing</a>
+      <ul>
+        <li>
+          11.1.
+          <a href="#" onclick="render('11.1_Writing_tests')">Writing tests</a>
+        </li>
+        <li>
+          11.2.
+          <a href="#" onclick="render('11.2_Running_tests')">Running tests</a>
+        </li>
+        <li>
+          11.3.
+          <a href="#" onclick="render('11.3_Test_Organization')">Test Organization</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      12.
+      <a href="#" onclick="render('12.0_An_I_O_Project_Building_a_Command_Line_Program')">An I/O Project: Building a Command Line Program</a>
+      <ul>
+        <li>
+          12.1.
+          <a href="#" onclick="render('12.1_Accepting_Command_Line_Arguments')">Accepting Command Line Arguments</a>
+        </li>
+        <li>
+          12.2.
+          <a href="#" onclick="render('12.2_Reading_File')">Reading a File</a>
+        </li>
+        <li>
+          12.3.
+          <a href="#" onclick="render('12.3_Refactoring_to_Improve_Modularity_and_Error_Handling')">Refactoring to Improve Modularity and Error Handling</a>
+        </li>
+        <li>
+          12.4.
+          <a href="#" onclick="render('12.4_Testing_Library')">Developing the Library’s Functionality with Test Driven Development</a>
+        </li>
+        <li>
+          12.5.
+          <a href="#" onclick="render('12.5_Working_with_Environment_Variables')">Working with Environment Variables</a>
+        </li>
+        <li>
+          12.6.
+          <a href="#" onclick="render('12.6_Writing_Error_Messages_to_stderr_Instead_of_stdout')">Writing Error Messages to Standard Error Instead of Standard Output</a>
+        </li>
+      </ul>
+    </li>
+
+
+    <li>
+      13.
+      <a href="#" onclick="render('13.0_Functional_Features')">Functional Language Features: Iterators and Closures</a>
+      <ul>
+        <li>
+          13.1.
+          <a href="#" onclick="render('13.1_Closures')">Closures: Anonymous Functions that Can Capture Their Environment</a>
+        </li>
+        <li>
+          13.2.
+          <a href="#" onclick="render('13.2_Iterators')">Processing a Series of Items with Iterators</a>
+        </li>
+        <li>
+          13.3.
+          <a href="#" onclick="render('13.3_Improving_Our_I_O_Project')">Improving Our I/O Project</a>
+        </li>
+        <li>
+          13.4.
+          <a href="#" onclick="render('13.4_Comparing_Performance_Loops_vs_Iterators')">Comparing Performance: Loops vs. Iterators</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      14.
+      <a href="#" onclick="render('14.0_More_About_Cargo_and_Crates.io')">More about Cargo and Crates.io</a>
+      <ul>
+        <li>
+          14.1.
+          <a href="#" onclick="render('14.1_Customizing_Builds_with_Release_Profiles')">Customizing Builds with Release Profiles</a>
+        </li>
+        <li>
+          14.2.
+          <a href="#" onclick="render('14.2_Publishing_a_Crate_to_Crates.io')">Publishing a Crate to Crates.io</a>
+        </li>
+        <li>
+          14.3.
+          <a href="#" onclick="render('14.3_Cargo_Workspaces')">Cargo Workspaces</a>
+        </li>
+        <li>
+          14.4.
+          <a href="#" onclick="render('14.4_Installing_Binaries_from_Crates.io_with_cargo_install')">Installing Binaries from Crates.io with cargo install</a>
+        </li>
+        <li>
+          14.5.
+          <a href="#" onclick="render('14.5_Extending_Cargo_with_Custom_Commands')">Extending Cargo with Custom Commands</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      15.
+      <a href="#" onclick="render('15.0_Smart_Pointers')">Smart Pointers</a>
+      <ul>
+        <li>
+          15.1.
+          <a href="#" onclick="render('15.1_Box')">Box Points to Data on the Heap and Has a Known Size</a>
+        </li>
+        <li>
+          15.2.
+          <a href="#" onclick="render('15.2_deref')">The Deref Trait Allows Access to the Data Through a Reference</a>
+        </li>
+        <li>
+          15.3.
+          <a href="#" onclick="render('15.3_The_Drop_Trait_Runs_Code_on_Cleanup')">The Drop Trait Runs Code on Cleanup</a>
+        </li>
+        <li>
+          15.4.
+          <a href="#" onclick="render('15.4_Rc_the_Reference_Counted_Smart_Pointer')">Rc, the Reference Counted Smart Pointer</a>
+        </li>
+        <li>
+          15.5.
+          <a href="#" onclick="render('15.5_RefCell_and_the_Interior_Mutability_Pattern')">RefCell and the Interior Mutability Pattern</a>
+        </li>
+        <li>
+          15.6.
+          <a href="#" onclick="render('15.6_Reference_Cycles_Can_Leak_Memory')">Creating Reference Cycles and Leaking Memory is Safe</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      16.
+      <a href="#" onclick="render('16.0_Fearless_Concurrency')">Fearless Concurrency</a>
+      <ul>
+        <li>
+          16.1.
+          <a href="#" onclick="render('16.1_Threads')">Threads</a>
+        </li>
+        <li>
+          16.2.
+          <a href="#" onclick="render('16.2_Message_Passing')">Message Passing</a>
+        </li>
+        <li>
+          16.3.
+          <a href="#" onclick="render('16.3_Shared_State')">Shared State</a>
+        </li>
+        <li>
+          16.4.
+          <a href="#" onclick="render('16.4_Extensible_Concurrency_Sync_and_Send_Traits')">Extensible Concurrency: Sync and Send</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      17.
+      <a href="#" onclick="render('17.0_Is_Rust_an_Object_Oriented_Programming_Language')">Is Rust an Object-Oriented Programming Language?</a>
+      <ul>
+        <li>
+          17.1.
+          <a href="#" onclick="render('17.1_What_Does_Object_Oriented_Mean')">What Does Object-Oriented Mean?</a>
+        </li>
+        <li>
+          17.2.
+          <a href="#" onclick="render('17.2_Trait_Objects_for_using_Vectors_of_Different_Types')">Trait Objects for Using Values of Different Types</a>
+        </li>
+        <li>
+          17.3.
+          <a href="#" onclick="render('17.3_Object_Oriented_Design_Pattern_Implementation')">Object-Oriented Design Pattern Implementations</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      18.
+      <a href="#" onclick="render('18.0_Patterns_Match_the_Structure_of_Values')">Patterns Match the Structure of Values</a>
+      <ul>
+        <li>
+          18.1.
+          <a href="#" onclick="render('18.1_All_the_Places_Patterns_May_be_Used')">All the Places Patterns May be Used</a>
+        </li>
+        <li>
+          18.2.
+          <a href="#" onclick="render('18.2_Refutability_Whether_a_Pattern_Might_Fail_to_Match')">Refutability: Whether a Pattern Might Fail to Match</a>
+        </li>
+        <li>
+          18.3.
+          <a href="#" onclick="render('18.3_All_the_Pattern_Syntax')">All the Pattern Syntax</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      19.
+      <a href="#" onclick="render('19.0_Advanced_Features')">Advanced Features</a>
+      <ul>
+        <li>
+          19.1.
+          <a href="#" onclick="render('19.1_Unsafe_Rust')">Unsafe Rust</a>
+        </li>
+        <li>
+          19.2.
+          <a href="#" onclick="render('19.2_Advanced_Lifetimes')">Advanced Lifetimes</a>
+        </li>
+        <li>
+          19.3.
+          <a href="#" onclick="render('19.3_Advanced_Traits')">Advanced Traits</a>
+        </li>
+        <li>
+          19.4.
+          <a href="#" onclick="render('19.4_Advanced_Types')">Advanced Types</a>
+        </li>
+        <li>
+          19.5.
+          <a href="#" onclick="render('19.5_Advanced_Functions_and_Closures')">Advanced Functions & Closures</a>
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      20.
+      <a href="#" onclick="render('20.0_Final_Project_Building_a_Multithreaded_Web_Server')">Final Project: Building a Multithreaded Web Server</a>
+      <ul>
+        <li>
+          20.1.
+          <a href="#" onclick="render('20.1_A_Single_Threaded_Web_Server')">A Single Threaded Web Server</a>
+        </li>
+        <li>
+          20.2.
+          <a href="#" onclick="render('20.2_How_Slow_Requests_Affect_Throughput')">How Slow Requests Affect Throughput</a>
+        </li>
+        <li>
+          20.3.
+          <a href="#" onclick="render('20.3_Designing_the_Thread_Pool_Interface')">Designing the Thread Pool Interface</a>
+        </li>
+        <li>
+          20.4.
+          <a href="#" onclick="render('20.4_Creating_the_Thread_Pool_and_Storing_Threads')">Creating the Thread Pool and Storing Threads</a>
+        </li>
+        <li>
+          20.5.
+          <a href="#" onclick="render('20.5_Sending_Requests_to_Threads_Via_Channels')">Sending Requests to Threads Via Channels</a>
+        </li>
+        <li>
+          20.6.
+          <a href="#" onclick="render('20.6_Graceful_Shutdown_and_Cleanup')">Graceful Shutdown and Cleanup</a>
+        </li>
+      </ul>
+    </li>
+
   </ul>
   <script>
     function render(fileName) {
@@ -225,78 +477,3 @@
 </body>
 
 </html>
-
-<!-- 
-11. Testing
-    11.1. Writing tests
-    11.2. Running tests
-    11.3. Test Organization
-
-12. An I/O Project: Building a Command Line Program
-
-    12.1. Accepting Command Line Arguments
-    12.2. Reading a File
-    12.3. Refactoring to Improve Modularity and Error Handling
-    12.4. Developing the Library’s Functionality with Test Driven Development
-    12.5. Working with Environment Variables
-    12.6. Writing Error Messages to Standard Error Instead of Standard Output
-
-13. Functional Language Features: Iterators and Closures
-
-    13.1. Closures: Anonymous Functions that Can Capture Their Environment
-    13.2. Processing a Series of Items with Iterators
-    13.3. Improving Our I/O Project
-    13.4. Comparing Performance: Loops vs. Iterators
-
-14. More about Cargo and Crates.io
-
-    14.1. Customizing Builds with Release Profiles
-    14.2. Publishing a Crate to Crates.io
-    14.3. Cargo Workspaces
-    14.4. Installing Binaries from Crates.io with cargo install
-    14.5. Extending Cargo with Custom Commands
-
-15. Smart Pointers
-
-    15.1. Box Points to Data on the Heap and Has a Known Size
-    15.2. The Deref Trait Allows Access to the Data Through a Reference
-    15.3. The Drop Trait Runs Code on Cleanup
-    15.4. Rc, the Reference Counted Smart Pointer
-    15.5. RefCell and the Interior Mutability Pattern
-    15.6. Creating Reference Cycles and Leaking Memory is Safe
-
-16. Fearless Concurrency
-
-    16.1. Threads
-    16.2. Message Passing
-    16.3. Shared State
-    16.4. Extensible Concurrency: Sync and Send
-
-17. Is Rust an Object-Oriented Programming Language?
-
-    17.1. What Does Object-Oriented Mean?
-    17.2. Trait Objects for Using Values of Different Types
-    17.3. Object-Oriented Design Pattern Implementations
-
-18. Patterns Match the Structure of Values
-
-    18.1. All the Places Patterns May be Used
-    18.2. Refutability: Whether a Pattern Might Fail to Match
-    18.3. All the Pattern Syntax
-
-19. Advanced Features
-
-    19.1. Unsafe Rust
-    19.2. Advanced Lifetimes
-    19.3. Advanced Traits
-    19.4. Advanced Types
-    19.5. Advanced Functions & Closures
-
-20. Final Project: Building a Multithreaded Web Server
-
-    20.1. A Single Threaded Web Server
-    20.2. How Slow Requests Affect Throughput
-    20.3. Designing the Thread Pool Interface
-    20.4. Creating the Thread Pool and Storing Threads
-    20.5. Sending Requests to Threads Via Channels
-    20.6. Graceful Shutdown and Cleanup -->
