one more round of refactor

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </li>
 
     <li>
-      2 : Guessing Game Tutorial
+      2 : Guessing Game Tutorial (WIP)
       <ul>
         <li>
           2.1.
@@ -109,7 +109,7 @@
         </li>
         <li>
           5.2.
-          <a href="#" onclick="render('4.1_What_is_Ownership')">An Example Program Using Structs</a>
+          <a href="#" onclick="render('5.2_An_Example_Program_Using_Structs')">An Example Program Using Structs</a>
         </li>
         <li>
           5.3.
@@ -119,7 +119,7 @@
     </li>
 
     <li>
-      6. Enums and Pattern Matching
+      6. Enums and Pattern Matching (WIP)
       <ul>
         <li>
           6.1.
@@ -217,7 +217,7 @@
 
     <li>
       11.
-      <a href="#" onclick="render('11.0_Testing')">Testing</a>
+      <a href="#" onclick="render('11.0_Testing')">Testing (WIP)</a>
       <ul>
         <li>
           11.1.
@@ -236,7 +236,7 @@
 
     <li>
       12.
-      <a href="#" onclick="render('12.0_An_I_O_Project_Building_a_Command_Line_Program')">An I/O Project: Building a Command Line Program</a>
+      <a href="#" onclick="render('12.0_An_I_O_Project_Building_a_Command_Line_Program')">An I/O Project: Building a Command Line Program (WIP)</a>
       <ul>
         <li>
           12.1.
@@ -268,7 +268,7 @@
 
     <li>
       13.
-      <a href="#" onclick="render('13.0_Functional_Features')">Functional Language Features: Iterators and Closures</a>
+      <a href="#" onclick="render('13.0_Functional_Features')">Functional Language Features: Iterators and Closures (WIP)</a>
       <ul>
         <li>
           13.1.
@@ -318,7 +318,7 @@
 
     <li>
       15.
-      <a href="#" onclick="render('15.0_Smart_Pointers')">Smart Pointers</a>
+      <a href="#" onclick="render('15.0_Smart_Pointers')">Smart Pointers (WIP)</a>
       <ul>
         <li>
           15.1.
@@ -349,7 +349,7 @@
 
     <li>
       16.
-      <a href="#" onclick="render('16.0_Fearless_Concurrency')">Fearless Concurrency</a>
+      <a href="#" onclick="render('16.0_Fearless_Concurrency')">Fearless Concurrency (WIP)</a>
       <ul>
         <li>
           16.1.
@@ -391,7 +391,7 @@
 
     <li>
       18.
-      <a href="#" onclick="render('18.0_Patterns_Match_the_Structure_of_Values')">Patterns Match the Structure of Values</a>
+      <a href="#" onclick="render('18.0_Patterns_Match_the_Structure_of_Values')">Patterns Match the Structure of Values (WIP)</a>
       <ul>
         <li>
           18.1.
@@ -410,7 +410,7 @@
 
     <li>
       19.
-      <a href="#" onclick="render('19.0_Advanced_Features')">Advanced Features</a>
+      <a href="#" onclick="render('19.0_Advanced_Features')">Advanced Features (WIP)</a>
       <ul>
         <li>
           19.1.
@@ -437,7 +437,7 @@
 
     <li>
       20.
-      <a href="#" onclick="render('20.0_Final_Project_Building_a_Multithreaded_Web_Server')">Final Project: Building a Multithreaded Web Server</a>
+      <a href="#" onclick="render('20.0_Final_Project_Building_a_Multithreaded_Web_Server')">Final Project: Building a Multithreaded Web Server (WIP)</a>
       <ul>
         <li>
           20.1.
