added link to github source

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 
   <h1 align="center">The Rust Programming Language</h1>
 
-  <p>The idea is to create slides for
+  <p>The idea is to create gist of
     <a href="https://doc.rust-lang.org/book/second-edition/">
       <strong>The Book</strong>
     </a> for quick reference and presentations.
   </p>
+  <p>Its WIP and contributions are welcome! You can find the source
+    <a href="https://github.com/cg-cnu/rust-lang-gist">
+      <strong>on github</strong>
+    </a>.
+  </p>
+  
   <p>Inspired by
     <a href="https://github.com/ashleygwilliams/a-very-brief-intro-to-rust">A very brief intro to Rust</a> and
     <a href="https://github.com/steveklabnik/rust-in-ten-slides">Rust in Ten slides</a>
