--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </p>
   <p>Its WIP and contributions are welcome! You can find the source
     <a href="https://github.com/cg-cnu/rust-lang-gist">
-      <strong>on github</strong>
-    </a>.
+      <strong>on github</strong></a>.
   </p>
   
   <p>Inspired by
