--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <a style="display: flex; justify-content: center;">
-    <img style="width: 100px;" src="./static/images/rust-logo-256x256-blk.png" alt="Rust Logo" />
+    <img src="./static/images/rust-logo-256x256-blk.png" width="100" alt="Rust Logo" />
   </a>
 
   <h1 align="center">The Rust Programming Language</h1>
@@ -25,7 +25,7 @@
     <a href="https://github.com/cg-cnu/rust-lang-gist">
       <strong>on github</strong></a>.
   </p>
-  
+
   <p>Inspired by
     <a href="https://github.com/ashleygwilliams/a-very-brief-intro-to-rust">A very brief intro to Rust</a> and
     <a href="https://github.com/steveklabnik/rust-in-ten-slides">Rust in Ten slides</a>
