added height to image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <a style="display: flex; justify-content: center;">
-    <img src="./static/images/rust-logo-256x256-blk.png" width="100" alt="Rust Logo" />
+    <img src="./static/images/rust-logo-256x256-blk.png" width="100" height="100" alt="Rust Logo" />
   </a>
 
   <h1 align="center">The Rust Programming Language</h1>
