--- a/static/template.html
+++ b/static/template.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>The Rust Programming Language</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <style>
-    body {
-      font-size: 18px;
-      color: #444;
-    }
-  </style>
-</head>
-
-<body>
-  <textarea id="source"></textarea>
-  <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
-  </script>
-  <script type="text/javascript">
-    var slideshow = remark.create({
-      sourceUrl: sessionStorage.getItem("mdPath"),
-      slideNumberFormat: function (current, total) {
-        const actualSlideCount = total - 2;
-        if (current === 1) {
-          return `Total slides: ${actualSlideCount}`;
-        } else if (current === (total)) {
-          return "Thank You!"
-        } else {
-          return `${sessionStorage.getItem("mdTitle")} : ${(current - 1)} / ${actualSlideCount}`;
-        }
+  <head>
+    <title>The Rust Programming Language</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style>
+      body {
+        font-size: 18px;
+        color: #444;
       }
-    });
-  </script>
-</body>
+    </style>
+  </head>
 
+  <body>
+    <textarea id="source"></textarea>
+    <script
+      src="https://remarkjs.com/downloads/remark-latest.min.js"
+      type="text/javascript"
+    ></script>
+    <script type="text/javascript">
+      var slideshow = remark.create({
+        sourceUrl: sessionStorage.getItem("mdPath"),
+        slideNumberFormat: function(current, total) {
+          const actualSlideCount = total - 2;
+          if (current === 1) {
+            return `Total slides: ${actualSlideCount}`;
+          } else if (current === total) {
+            return "Thank You!";
+          } else {
+            return `${sessionStorage.getItem("mdTitle")} : ${current -
+              1} / ${actualSlideCount}`;
+          }
+        }
+      });
+    </script>
+  </body>
 </html>
