--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
           </li>
           <li>
             1.3.
-            <a
-              href="#"
-              onclick="render('1.3_How_Rust_is_Made_and_Nightly_Rust')"
-              >How Rust is made and "Nightly Rust"</a
-            >
+            <a href="#" onclick="render('1.3_Hello_Cargo')">Hello, Cargo!</a>
           </li>
         </ul>
       </li>
