--- a/index.html
+++ b/index.html
@@ -11,38 +11,28 @@
     <a style="display: flex; justify-content: center;">
       <img
         src="./static/images/rust-logo-256x256-blk.png"
-        width="100"
-        height="100"
+        width="150"
+        height="150"
         alt="Rust Logo"
       />
     </a>
 
-    <h1 align="center">The Rust Programming Language</h1>
-
-    <p>
-      The idea is to create gist of
-      <a href="https://doc.rust-lang.org/book/second-edition/">
-        <strong>The Book</strong>
-      </a>
-      for quick reference and presentations.
-    </p>
-    <p>
-      Its WIP and contributions are welcome! You can find the source
-      <a href="https://github.com/cg-cnu/rust-lang-gist">
-        <strong>on github</strong></a
-      >.
-    </p>
-
-    <p>
-      Inspired by
-      <a href="https://github.com/ashleygwilliams/a-very-brief-intro-to-rust"
-        >A very brief intro to Rust</a
-      >
-      and
-      <a href="https://github.com/steveklabnik/rust-in-ten-slides"
-        >Rust in Ten slides</a
-      >
-    </p>
+    <div style="text-align: center;">
+      <h1>Rust Language Gist</h1>
+      <p>
+        Gist of
+        <a href="https://doc.rust-lang.org/book/second-edition/">
+          <strong>The Book</strong> </a
+        >.
+      </p>
+      <p></p>
+      <p>
+        Its WIP and contributions are welcome. You can find the source at
+        <a href="https://github.com/cg-cnu/rust-lang-gist">
+          <strong>github</strong></a
+        >.
+      </p>
+    </div>
 
     <ul>
       <li>
